--- a/css/app.css
+++ b/css/app.css
@@ -14,11 +14,11 @@
 }
 
 .gamesense-green {
-	color: #95B817 !important;
+	color: #a1a1a1 !important
 }
 
 .gamesense-green-bg {
-	background-color: #95B817 !important;
+	background-color: #333 !important;
 }
 
 .section {
