--- a/css/app.css
+++ b/css/app.css
@@ -10,7 +10,7 @@ nav .brand-logo {
 
 .card-editor {
 	padding: 5px !important;
-	background-color: #181818 !important;
+	background-color: #1d2021 !important;
 }
 
 .nav {
