--- a/css/app.css
+++ b/css/app.css
@@ -1,53 +1,42 @@
-/* width */
 ::-webkit-scrollbar {
 	width: 8px;
 	height: 8px;
 }
+::-webkit-scrollbar-track { background: #1d2021b0 }
+::-webkit-scrollbar-thumb { background: #888 }
+::-webkit-scrollbar-thumb:hover { background: #555 }
 
-/* Track */
-::-webkit-scrollbar-track {
-	background: #1d2021b0;
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-	background: #888;
-}
-
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-	background: #555;
-}
-.editor {
-	position: relative;
-	width: 100%;
-	height: 83vh;
-}
-
-nav .brand-logo {
-        padding-left: 10px;
-}
-
-.card-editor {
-	padding: 5px !important;
-	background-color: #1d2021 !important;
-}
+.fg { color: #a1a1a1 !important }
+.editor { height: calc(100vh - 63px) }
+.logo { padding-left: 10px }
 
 .nav {
-	background-color: #333;
+	padding-top: 5px;
+	padding-bottom: 15px;
 }
 
-.gamesense-green {
-	color: #a1a1a1 !important
+.button {
+    margin-left: 5px;
+
+    background-color: #333;
+    border: 1px solid #555555;
+    border-radius: 3px;
+    box-shadow: #333 0 2px 5px 0;
+    color: #ccc;
+
+    cursor: pointer;
+    font-size: smaller;
+    padding: 4px 10px;
+    text-align: center;
+    transition: 100ms;
+
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
 }
 
-.gamesense-green-bg {
-	background-color: #333 !important;
-}
-
-.btn {
-	padding: 0 31px;
-	margin-right: 5px;
+.button:active {
+  background-color: #222;
 }
 
 @media only screen and (min-width: 993px) {
@@ -61,18 +50,5 @@ nav .brand-logo {
 	#toast-container {
 		bottom: unset;
 		top: 9%;
-	}
-
-	.editor {
-		max-height: 72vh;
-	}
-
-	.button {
-		width: 100%;
-	}
-
-	.btn {
-		height: 54px;
-		line-height: 54px;
 	}
 }
